--- a/aod.html
+++ b/aod.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name= "description" content= "accessibility, innovative, research, presentation, engineering, student">
-        <meta name= "keywords" content= "blogs, engineering, student, sales">
+        <meta name= "keywords" content= "projects, chemical, engineering, student,">
         <meta name="author" content="Vishakaa Satheeshkumar">
         <title>Vishakaa S | Request for Proposal</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
@@ -48,9 +48,9 @@
             </section>
         </main>
 
-        <!--<footer>
+        <footer>
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
-        </footer>-->
+        </footer>
     </div>
 
 </body>
