--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                             <p>I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma and project management 💡</strong></p>
                             <p>Below is a summary of relevent engineering courses, certifications, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
                             <p><strong>Courses:</strong> Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, and Organic Chemistry<br>
-                            <strong>Software:</strong> Microsoft Office Suit (Word, PowerPoint, Excel) and AutoCAD <br>
+                            <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel) and AutoCAD <br>
                             <strong>Programming Languages:</strong> HTML, CSS, and Matlab
                             </p>
                             <p>Currently, I'm actively seeking any engineering related co-op opportunities from <strong>September to December 2020 🔍</strong></p>
