--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                             <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
                             <p>Recently, I completed my second year of Chemical Engineering at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
                             <p>Before I head off into my third year, I've decided to self-learn how to program my very own website using HTML and CSS through Visual Studio Code and Github repositories 👩🏽‍💻</p>
-                            <p>I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma 💡</strong></p>
+                            <p>I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma foundations 💡</strong></p>
                             <p>Below is a summary of relevent engineering courses, certifications, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
                             <p><strong>Courses:</strong> Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, and Organic Chemistry<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel) and AutoCAD <br>
