--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel) and AutoCAD <br>
                             <strong>Programming Languages:</strong> HTML, CSS, and Matlab
                             </p>
-                            <p>Currently, I'm actively seeking any engineering related co-op opportunities from <strong>September to December 2020 🔍</strong></p>
+                            <p>Currently, I'm actively seeking any engineering or operations/project management related co-op opportunities from <strong>September to December 2020 🔍</strong></p>
                             <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message via LinkedIn! 📨</p>
                     </article>
             </section>    
