--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                             <p>Before I head off into my third year, I've decided to self-learn how to program my very own website using HTML and CSS through Visual Studio Code and Github repositories 👩🏽‍💻</p>
                             <p>I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma foundations 💡</strong></p>
                             <p>Below is a summary of relevent engineering courses, certifications, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
-                            <p><strong>Courses:</strong> Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, and Organic Chemistry<br>
+                            <p><strong>Courses:</strong> Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, Differential Equations & Vector Calculus, and Organic Chemistry<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel) and AutoCAD <br>
                             <strong>Programming Languages:</strong> HTML, CSS, and Matlab
                             </p>
