--- a/aod.html
+++ b/aod.html
@@ -9,6 +9,7 @@
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="css/style2.css">
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     </head>
 
 <body>
