--- a/about.html
+++ b/about.html
@@ -20,14 +20,14 @@
             <div class="logos">
                 <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
                 <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
-                <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
+                <a href="contact.html" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
             </div>
         </header>
 
         <nav id="menu">
                 <ul class="links">
                     <li><a href="index.html">Home</a></li>
-                    <li class="currrent"><a href="about.html">About Me</a></li>
+                    <li class="current"><a href="about.html">About Me</a></li>
                     <li><a href="projects.html">Projects</a></li>
                 </ul>
         </nav>
@@ -39,15 +39,16 @@
                         <h2>About Me</h2>
                             <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
                             <p>Recently, I completed my second year of Chemical Engineering at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
-                            <p>Before I head off into my third year, I've decided to self-learn how to program my very own website using HTML and CSS through Visual Studio Code and Github repositories 👩🏽‍💻</p>
-                            <p>I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma foundations 💡</strong></p>
+                            <p><h4>Here's a little about me:</h4></p>
+                            <p>I'm a creative and hardworking individual who is keen on self-development and tries to challenge herself on a daily basis.</p>
+                            <p>For instance, I've used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma 💡</strong></p>
                             <p>Below is a summary of relevent engineering courses, certifications, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
                             <p><strong>Courses:</strong> Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, Differential Equations & Vector Calculus, and Organic Chemistry<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel) and AutoCAD <br>
                             <strong>Programming Languages:</strong> HTML, CSS, and Matlab
                             </p>
-                            <p>Currently, I'm actively seeking any engineering or operations/project management related co-op opportunities from <strong>September to December 2020 🔍</strong></p>
-                            <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message via LinkedIn! 📨</p>
+                            <p>Currently, I'm actively seeking any engineering related co-op opportunities within the operations/project management scope from <strong>May to August 2021 🔍</strong></p>
+                            <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message <strong><a href="contact.html">here</a></strong> or connect with me on LinkedIn! 📨</p>
                     </article>
             </section>    
         </main>
@@ -56,5 +57,6 @@
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
         </footer>
     </div>  
+    <script src="main.js"></script>
 </body>
 </html>
