--- a/aod.html
+++ b/aod.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name= "description" content= "accessibility, innovative, research, presentation, engineering, student">
-        <meta name= "keywords" content= "projects, chemical, engineering, student,">
+        <meta name= "keywords" content= "blogs, engineering, student, sales">
         <meta name="author" content="Vishakaa Satheeshkumar">
         <title>Vishakaa S | Request for Proposal</title>
         <script src='https://kit.fontawesome.com/a076d05399.js'></script>
@@ -20,7 +20,7 @@
             <div class = "logos">
                 <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
                 <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
-                <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
+                <a href="contact.html" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
             </div>
         </header>
 
@@ -53,6 +53,6 @@
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
         </footer>
     </div>
-
+    <script src="main.js"></script>
 </body>
 </html>
