--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -20,7 +20,7 @@
             <div class = "logos">
                 <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
                 <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
-                <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
+                <a href="contact.html" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
             </div>
         </header>
 
@@ -30,8 +30,7 @@
                         <li><a href="about.html">About Me</a></li>
                         <li><a href="projects.html">Projects</a></li>
                     </ul>
-        </nav>
-
+            </nav>
 <!--Main Area of the Page-->
         <main>
             <section>
@@ -53,5 +52,6 @@
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
         </footer>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
