--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </head>
 
 <body>
+
 <!--Nav: Navigation/Menu Bar-->
     <nav id="menu">
         <div class = "container">
@@ -25,7 +26,6 @@
             </ul>
         </div>
     </nav>
-
 
 <!--Main Area of the Page-->
     <main>
@@ -38,7 +38,7 @@
                 <ul>
                 <li><a href="http://www.linkedin.com/in/vishakaasatheeshkumar"><i class="fa fa-linkedin-square" style="font-size:36px"></i></a></li>
                 <li><a href="https://www.github.com/vishakaas"><i class="fa fa-github-square" style="font-size:36px"></i></a></li>
-                <li><a href="http://www.gmail.com"><i class="fa fa-envelope-square" style="font-size:36px"></i></a></li>
+                <li><a href="contact.html"><i class="fa fa-envelope-square" style="font-size:36px"></i></a></li>
                 </ul>
             </div>
     </main>
@@ -46,5 +46,6 @@
     <footer>
         <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
