--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@
             <div class="logos">
                 <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
                 <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
-                <a href="http://www.gmail.com" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
+                <a href="contact.html" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
             </div>
         </header>
 
@@ -57,5 +57,6 @@
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
         </footer>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
