--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
                     </label>
 
                     <label>Subject:
-                        <input type="subject" name="subject">
+                        <input type="subject" name="subject" class="subject">
                     </label>
 
                     <label>Message:
