--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                             <p>Recently, I completed my second year of Chemical Engineering at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
                             <p><h4>Here's a little about me:</h4></p>
                             <p>I'm a creative and hardworking individual who is keen on self-development and tries to challenge herself on a daily basis.</p>
-                            <p>For instance, I've used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma 💡</strong></p>
+                            <p>For instance, I've used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma foundations 💡</strong></p>
                             <p>Below is a summary of relevent engineering courses, certifications, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
                             <p><strong>Courses:</strong> Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, Differential Equations & Vector Calculus, and Organic Chemistry<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel) and AutoCAD <br>
