--- a/about.html
+++ b/about.html
@@ -38,11 +38,18 @@
                     <article id="description">
                         <h2>About Me</h2>
                             <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
-                            <p>Recently, I completed my second year of Chemical Engineering at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
-                            <p><h4>Here's a little about me:</h4></p>
-                            <p>I'm a creative and hardworking individual who is keen on self-development and tries to challenge herself on a daily basis.</p>
-                            <p>For instance, I've used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma foundations 💡</strong></p>
-                            <p>Below is a summary of relevent engineering courses, certifications, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
+                            <p>I'm a third year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>                            
+                            <p>Recently, I participated in the open access Accenture Virtual Experience Program with InsideSherpa. From successful completion of the 6 hour program, I became familiar with the following tasks via practical modules:<br>
+                                • Setting Project Priorities <br>
+                                • Assembling a Plan<br>
+                                • User Journey Redesign<br>
+                                • Outcomes Analysis<br>
+                                • Error Fixation<br>
+                                • Client Communication<br>
+                                • Prioritization & Impact Assessment<br>
+                                
+                            <p>Moreover, I've used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma foundations 💡</strong></p>
+                            <p>Below is a summary of relevent engineering courses, software, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
                             <p><strong>Courses:</strong> Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, Differential Equations & Vector Calculus, and Organic Chemistry<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel) and AutoCAD <br>
                             <strong>Programming Languages:</strong> HTML, CSS, and Matlab
@@ -53,7 +60,7 @@
             </section>    
         </main>
 
-        <footer class="push">
+        <footer class="push-1">
             <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
         </footer>
     </div>  
