--- a/about.html
+++ b/about.html
@@ -39,7 +39,8 @@
                         <h2>About Me</h2>
                             <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
                             <p>I'm a third year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>                            
-                            <p>Recently, I participated in the open access Accenture Virtual Experience Program with InsideSherpa. From successful completion of the 6 hour program, I became familiar with the following tasks via practical modules:<br>
+                            <p>Recently, I participated in the open access Accenture Virtual Experience Program with <strong><a href="https://www.insidesherpa.com/#lp">InsideSherpa</a></strong><br>
+                             From successful completion of the 6 hour program, I became familiar with the following tasks via practical modules:<br>
                                 • Setting Project Priorities <br>
                                 • Assembling a Plan<br>
                                 • User Journey Redesign<br>
