--- a/about.html
+++ b/about.html
@@ -38,24 +38,18 @@
                     <article id="description">
                         <h2>About Me</h2>
                             <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
-                            <p>I'm a third year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>                            
-                            <p>Recently, I participated in the open access Accenture Virtual Experience Program with <strong><a href="https://www.insidesherpa.com/#lp">InsideSherpa 👩🏽‍💻</a></strong><br>
-                             From successful completion of the program, I became familiar with the following tasks via practical modules:<br>
-                                • Setting Project Priorities <br>
-                                • Assembling a Plan<br>
-                                • User Journey Redesign<br>
-                                • Outcomes Analysis<br>
-                                • Error Fixation<br>
-                                • Client Communication<br>
-                                • Prioritization & Impact Assessment<br>
+                            <p>I'm a third year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
+                            <p>Currently, I'm participating in the open access <strong><a href="https://www.insidesherpa.com/virtual-internships/prototype/EhPoi4AiGigk4CJKq/Digital-Technology-ERP-Virtual-Experience-Program">General Electric Virtual Experience Program with InsideSherpa</a></strong> to futher enhance my project management knowledge by solving a business process gap with enterprise software 📖⚙️</p>
+                            <p>Previously, I've participated in the open access <strong><a href="https://www.insidesherpa.com/virtual-internships/prototype/MD2p8dDih7zoQ9KRC/Consulting-Virtual-Internship">Accenture Virtual Experience Program with InsideSherpa</a></strong> and became familiar with skills in the areas of project and stakeholder management, decision-making, data interpretation, user experience, and process design 👩🏽‍💻<br>
+                            <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
                                 
-                            <p>Moreover, I've used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma foundations 💡</strong></p>
+                            <p>I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma and project management foundations 💡</strong></p>
                             <p>Below is a summary of relevent engineering courses, software, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
                             <p><strong>Courses:</strong> Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, Differential Equations & Vector Calculus, and Organic Chemistry<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel) and AutoCAD <br>
                             <strong>Programming Languages:</strong> HTML, CSS, and Matlab
                             </p>
-                            <p>Currently, I'm actively seeking any engineering related co-op opportunities within the operations/project management scope from <strong>May to August 2021 🔍</strong></p>
+                            <p>Currently, I'm actively seeking any engineering related co-op opportunities within the project management scope from <strong>May to August 2021 🔍</strong></p>
                             <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message <strong><a href="contact.html">here</a></strong> or connect with me on LinkedIn! 📨</p>
                     </article>
             </section>    
