--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
                 <div class="logos">
                     <a href="http://www.linkedin.com/in/vishakaasatheeshkumar" i class="fa fa-linkedin-square" style="font-size:36px"></a></i>
                     <a href="https://www.github.com/vishakaas" i class="fa fa-github-square" style="font-size:36px"></a></i>
-                    <a href="contact1.html" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
+                    <a href="contact.html" i class="fa fa-envelope-square" style="font-size:36px"></a></i>
                 </div>
             </header>
 
