--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel) and AutoCAD <br>
                             <strong>Programming Languages:</strong> HTML, CSS, and Matlab
                             </p>
-                            <p>Currently, I'm actively seeking any engineering related co-op opportunities within the project management scope from <strong>May to August 2021 🔍</strong></p>
+                            <p>Currently, I'm seeking any engineering related co-op opportunities within the project management scope from <strong>May to August 2021 🔍</strong></p>
                             <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message <strong><a href="contact.html">here</a></strong> or connect with me on LinkedIn! 📨</p>
                     </article>
             </section>    
