--- a/about.html
+++ b/about.html
@@ -39,23 +39,23 @@
                         <h2>About Me</h2>
                             <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
                             <p>I'm a third year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
-                            <p>Previously, I've participated in the open access <strong><a href="https://www.theforage.com/virtual-internships/prototype/EhPoi4AiGigk4CJKq/Digital-Technology-ERP-Virtual-Experience-Program">General Electric </a></strong> and <strong><a href="https://www.theforage.com/virtual-internships/prototype/rMSFymzsPCwMGRun8/Accenture-Virtual-Experience-Program">Accenture</a></strong> Virtual Experience Program with Forage to further enhance my project management knowledge by solving a business process gap 👩🏽‍💻</p>
-                            <p>The two programs allowed me to become familiar with: creating a high-level (L1) business process map, developing a fishbone diagram, summarizing a problem statement, identifying a potential solution, along with data interpretation, user experience, and process design 💭</p>
+                            <p>Previously, I worked at <strong><a href="https://www.creationtech.com"> Creation Technologies </a></strong> as a <strong>Manufacturing Trainee ⚙️</strong></p>
+                            <p>Here, I supported the Production Department with various manufacturing processes while thriving in a fast-paced work environment, improved the manufacturing efficiency by analyzing workflow and equipment layout,operated industrial equipment for the design and testing of <strong>over 1,000 EMS products</strong>, all while adhering to GMP and OHS procedures 🥽</p>
                             <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
                             <p>Moreover, I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma and project management foundations 💡</strong></p>
                             <p>Below is a summary of relevent engineering courses, software, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
-                            <p><strong>Courses:</strong> Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, Differential Equations & Vector Calculus, and Organic Chemistry<br>
-                            <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel) and AutoCAD <br>
+                            <p><strong>Courses:</strong>Heat Transfer Operations, Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, Differential Equations & Vector Calculus, Organic Chemistry<br>
+                            <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel), Trello, AutoCAD <br>
                             <strong>Programming Languages:</strong> HTML, CSS, and Matlab
                             </p>
-                            <p>Currently, I'm seeking any engineering related co-op opportunities within the project management scope from <strong>May to August 2021 🔍</strong></p>
+                            <p>Currently, I'm seeking any engineering related co-op opportunities within the project management and manufacturing scope from <strong>May to August 2021 🔍</strong></p>
                             <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message <strong><a href="contact.html">here</a></strong> or connect with me on LinkedIn! 📨</p>
                     </article>
             </section>    
         </main>
 
         <footer class="push-1">
-            <p>&copy; 2020 | Designed by Vishakaa ✏️</p>
+            <p>&copy; 2021 | Designed by Vishakaa ✏️</p>
         </footer>
     </div>  
     <script src="main.js"></script>
