--- a/about.html
+++ b/about.html
@@ -40,13 +40,14 @@
                             <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
                             <p>I'm a third year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
                             <p>Previously, I worked at <strong><a href="https://www.creationtech.com"> Creation Technologies </a></strong> as a <strong>Manufacturing Trainee ⚙️</strong></p>
-                            <p>Here, I supported the Production Department with various manufacturing processes while thriving in a fast-paced work environment, improved the manufacturing efficiency by analyzing workflow and equipment layout,operated industrial equipment for the design and testing of <strong>over 1,000 EMS products</strong>, all while adhering to GMP and OHS procedures 🥽</p>
+                            <p>Here, I supported the Production Department with various manufacturing processes while thriving in a fast-paced work environment, improved the manufacturing efficiency by analyzing workflow and equipment layout, and operated industrial equipment for the design and testing of <strong>over 1,000 EMS products</strong></p>
                             <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
                             <p>Moreover, I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma and project management foundations 💡</strong></p>
                             <p>Below is a summary of relevent engineering courses, software, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
                             <p><strong>Courses:</strong>Heat Transfer Operations, Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, Differential Equations & Vector Calculus, Organic Chemistry<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel), Trello, AutoCAD <br>
-                            <strong>Programming Languages:</strong> HTML, CSS, and Matlab
+                            <strong>Programming Languages:</strong> HTML, CSS, and Matlab <br>
+                            <strong>Training:</strong> WHMIS, EHS, GMP, OHS
                             </p>
                             <p>Currently, I'm seeking any engineering related co-op opportunities within the project management and manufacturing scope from <strong>May to August 2021 🔍</strong></p>
                             <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message <strong><a href="contact.html">here</a></strong> or connect with me on LinkedIn! 📨</p>
