--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                             <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
                             <p>Moreover, I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma and project management foundations 💡</strong></p>
                             <p>Below is a summary of relevent engineering courses, software, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
-                            <p><strong>Courses:</strong>Heat Transfer Operations, Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, Differential Equations & Vector Calculus, Organic Chemistry<br>
+                            <p><strong>Courses:</strong>Heat Transfer Operations, Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, Differential Equations & Vector Calculus<br>
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel), Trello, AutoCAD <br>
                             <strong>Programming Languages:</strong> HTML, CSS, and Matlab <br>
                             <strong>Training:</strong> WHMIS, EHS, GMP, OHS
