--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                             <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
                             <p>I'm a third year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
                             <p>Previously, I worked at <strong><a href="https://www.creationtech.com"> Creation Technologies </a></strong> as a <strong>Manufacturing Trainee ⚙️</strong></p>
-                            <p>Here, I supported the Production Department with various manufacturing processes while thriving in a fast-paced work environment, improved the manufacturing efficiency by analyzing workflow and equipment layout, and operated industrial equipment for the design and testing of <strong>over 1,000 EMS products</strong></p>
+                            <p>Here, I supported the Production Department with various manufacturing processes in a thriving work environment, improved the manufacturing efficiency by analyzing workflow and equipment layout, and operated industrial equipment for the assembling and testing of <strong>over 1,000 EMS products</strong></p>
                             <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
                             <p>Moreover, I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma and project management foundations 💡</strong></p>
                             <p>Below is a summary of relevent engineering courses, software, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
