--- a/about.html
+++ b/about.html
@@ -38,18 +38,24 @@
                     <article id="description">
                         <h2>About Me</h2>
                             <p>Hey there! My name is <strong><a href="https://vishakaas.github.io/">Vishakaa Satheeshkumar 🙋🏽‍♀️</a></strong></p> 
-                            <p>I'm a third year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
-                            <p>Previously, I worked at <strong><a href="https://www.creationtech.com"> Creation Technologies </a></strong> as a <strong>Manufacturing Trainee ⚙️</strong></p>
-                            <p>Here, I supported the Production Department with various manufacturing processes in a thriving work environment, improved the manufacturing efficiency by analyzing workflow and equipment layout, and operated industrial equipment for the assembling and testing of <strong>over 1,000 EMS products</strong></p>
+                            <p>I'm a fourth year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
+                            <p>Currently, I'm completing my summmer co-op placement at <strong><a href="https://www.creationtech.com"> Creation Technologies </a></strong> in <strong>Manufacturing Engineering Support ⚙️</strong></p>
+                            <p>Here, I'm working alongside several Test & Process Engineers to develop or revise: 
+                                <li>
+                                    Process Validation Plans and Commissioning Reports (IQ, OQ, PQ) for new and pre-existing engineering equipment (e.g., torque meters, laser marker, robotic soldering)
+                                    Process Qualification Records for incoming chemicals (e.g., solder paste)
+                                    Engineering controlled documentation to implement for use in production (i.e., updating work instructions)
+                                    Engineering Change Order for product design via Windchill platform
+                                </li>
                             <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
-                            <p>Moreover, I've also used my personal time to learn and acquire valuable tools for improving workplace operations, such as <strong>lean six sigma and project management foundations 💡</strong></p>
-                            <p>Below is a summary of relevent engineering courses, software, and areas that I excel in, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
-                            <p><strong>Courses:</strong> Heat Transfer Operations, Fluid Mechanics, Thermodynamics, Process Measurements, Instrumental Methods of Analysis, Differential Equations & Vector Calculus<br>
-                            <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel), Trello, AutoCAD <br>
+                            <p>Below is a summary of my current areas of expertise, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
+                            <p><strong>Courses:</strong> Mass Transfer Operations, Chemical Engineering Materials, Chemical Engineering Computations, Heat Transfer Operations, Fluid Mechanics, Thermodynamics, Process Measurements, Differential Equations & Vector Calculus<br>
+                            <strong>Training:</strong> Lean Six Sigma Foundations, Project Management Foundations, PivotTables, Macros, VBA, AutoCAD Essentials
+                            <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel, Outlook, Teams), Google Suite (Docs, Sheets, Slides, Meets), Notion, Trello, AutoCAD <br>
                             <strong>Programming Languages:</strong> HTML, CSS, and Matlab <br>
-                            <strong>Training:</strong> WHMIS, EHS, GMP, OHS
+                            <strong>Certifications:</strong> WHMIS, EHS, GMP, OHS, GLP, Chemical Safety
                             </p>
-                            <p>Currently, I'm seeking any engineering related co-op opportunities within the project management and manufacturing scope from <strong>May to August 2021 🔍</strong></p>
+                            <p>Currently, I'm seeking a 4 or 8-month co-op opportunities within the process field from <strong>January to August 2021 🔍</strong></p>
                             <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message <strong><a href="contact.html">here</a></strong> or connect with me on LinkedIn! 📨</p>
                     </article>
             </section>    
