--- a/about.html
+++ b/about.html
@@ -51,8 +51,7 @@
                             <p>Below is a summary of my current areas of expertise, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
                             <p><strong>Courses:</strong> Mass Transfer Operations, Chemical Engineering Materials, Chemical Engineering Computations, Heat Transfer Operations, Fluid Mechanics, Thermodynamics, Process Measurements, Differential Equations & Vector Calculus<br>
                             <strong>Training:</strong> Lean Six Sigma Foundations, Project Management Foundations, PivotTables, Macros, VBA, AutoCAD Essentials
-                            <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel, Outlook, Teams), Google Suite (Docs, Sheets, Slides, Meets), Notion, Trello, AutoCAD <br>
-                            <strong>Programming Languages:</strong> HTML, CSS, and Matlab <br>
+                            <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel, Outlook, Teams), Google Suite (Docs, Sheets, Slides, Meets), Notion, Trello, MATLAB, AutoCAD <br>
                             <strong>Certifications:</strong> WHMIS, EHS, GMP, OHS, GLP, Chemical Safety
                             </p>
                             <p>Currently, I'm seeking a 4 or 8-month co-op opportunities within the process field from <strong>January to August 2021 🔍</strong></p>
