--- a/about.html
+++ b/about.html
@@ -41,11 +41,10 @@
                             <p>I'm a fourth year Chemical Engineering student at <strong><a href="https://www.ryerson.ca/chemical/">Ryerson University 👩🏽‍🔬📚</a></strong></p>
                             <p>Currently, I'm completing my summmer co-op placement at <strong><a href="https://www.creationtech.com"> Creation Technologies </a></strong> in <strong>Manufacturing Engineering Support ⚙️</strong></p>
                             <p>Here, I'm working alongside several Test & Process Engineers to develop or revise: 
-                                <li>
-                                    Process Validation Plans and Commissioning Reports (IQ, OQ, PQ) for new and pre-existing engineering equipment (e.g., torque meters, laser marker, robotic soldering)
-                                    Process Qualification Records for incoming chemicals (e.g., solder paste)
-                                    Engineering controlled documentation to implement for use in production (i.e., updating work instructions)
-                                    Engineering Change Order for product design via Windchill platform
+                                <li> Process Validation Plans and Commissioning Reports (IQ, OQ, PQ) for new and pre-existing engineering equipment (e.g., torque meters, laser marker, robotic soldering)
+                                <li> Process Qualification Records for incoming chemicals (e.g., solder paste)
+                                <li> Engineering controlled documentation to implement for use in production (i.e., updating work instructions)
+                                <li> Engineering Change Order for product design via Windchill platform
                                 </li>
                             <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
                             <p>Below is a summary of my current areas of expertise, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
