--- a/projects.html
+++ b/projects.html
@@ -42,6 +42,10 @@
                 <!--<div class="container">-->
                     <article id="item">
                         <h2>Projects</h2>
+                        <h4><a href="bioeng.html">Bioengineering Project: Lactic Acid Fermentation</a></h4>
+                            <small>January to April 2021</small>
+                        <h4><a href="heatdesign.html">Heat Transfer Design Project: Heat Exchanger</a></h4>
+                            <small>October to December 2020</small>
                         <h4><a href="aod.html">Request for Proposal: Accessibility on Demand</a></h4>
                             <small>January to April 2020</small>
                         <h4><a href="pillbuzz.html">Reverse Engineering: Pill Buzz</a></h4>
