--- a/bioeng.html
+++ b/bioeng.html
@@ -38,10 +38,9 @@
                         <h2>Lactic Acid Fermentation</h2>
                             <p><Strong>Objective:</strong> Research a product manufactured in the bioprocessing industry that uses enzymes or cells. </p> 
                             <p> I worked in a team of 4 to complete the project through the following 4 phases:
-                            <li>
-                                Conducting preliminary research for a literature survey to determine the feasibility of the topic
-                                Designing an e-Poster to summarize findings efficiently by utilizing the graphic tools included in Microsoft PowerPoint to create process diagrams and flowcharts
-                                Preparing a final report on the background of lactic acid fermentation, relevant upstream process routes, downstream operations, industrial applications, benefits, and summary of findings.
+                            <li> Conducting preliminary research for a literature survey to determine the feasibility of the topic
+                            <li> Designing an e-Poster to summarize findings efficiently by utilizing the graphic tools included in Microsoft PowerPoint to create process diagrams and flowcharts
+                            <li> Preparing a final report on the background of lactic acid fermentation, relevant upstream process routes, downstream operations, industrial applications, benefits, and summary of findings.
                             </li>
                             </p>
                             <!--<div class="container">
