--- a/about.html
+++ b/about.html
@@ -48,10 +48,9 @@
                                 </li>
                             <!--<img src="images/chem.png" alt="chemical engineering" class="box-img>-->
                             <p>Below is a summary of my current areas of expertise, which is frequently updated, as I <em>constantly</em> look for ways to better myself:</p>
-                            <p><strong>Courses:</strong> Mass Transfer Operations, Chemical Engineering Materials, Chemical Engineering Computations, Heat Transfer Operations, Fluid Mechanics, Thermodynamics, Process Measurements, Differential Equations & Vector Calculus<br>
-                            <strong>Training:</strong> Lean Six Sigma Foundations, Project Management Foundations, PivotTables, Macros, VBA, AutoCAD Essentials
+                            <p><strong>Courses:</strong> Lean Six Sigma Foundations, Project Management Foundations, PivotTables, Macros, VBA, AutoCAD Essentials
                             <strong>Software:</strong> Microsoft Office Suite (Word, PowerPoint, Excel, Outlook, Teams), Google Suite (Docs, Sheets, Slides, Meets), Notion, Trello, MATLAB, AutoCAD <br>
-                            <strong>Certifications:</strong> WHMIS, EHS, GMP, OHS, GLP, Chemical Safety
+                            <strong>Training:</strong> WHMIS, EHS, GMP, OHS, GLP, Chemical Safety
                             </p>
                             <p>Currently, I'm seeking a 4 or 8-month co-op opportunities within the process field from <strong>January to August 2021 🔍</strong></p>
                             <p>If you find that my qualifications meet your requirements for an available position, feel free to send me a message <strong><a href="contact.html">here</a></strong> or connect with me on LinkedIn! 📨</p>
