--- a/pillbuzz.html
+++ b/pillbuzz.html
@@ -36,8 +36,8 @@
             <section>
                     <article>
                         <h2>Pill Buzz</h2>
-                            <p> I worked in a group of 8 to research a new solution for a pre-existing issue in the baby boomer generation.</p>
-                            <p>An average pill bottle was redesigned to optimize its functionality by making it portable and convenient with installed audible (buzzer), visible (light) and other programmed features to notify the user when to take the pill.</p>
+                        <p><strong>Objective:</strong> Research and propose a new solution for a pre-existing issue in the baby boomer generation.</p>
+                        <p> I worked in a group of 8 to redesign an average pill bottle and optimize its functionality by making it portable and convenient with installed audible (buzzer), visible (light) and other programmed features to notify the user when to take the pill.</p>
                             <div class="container">
                                 <img src="images/pillbottle1.png" alt="pill bottle design" class="bottle1-img">
                                 <img src="images/pillbottle2.png" alt="pill bottle design" class="bottle2-img">
