--- a/aod.html
+++ b/aod.html
@@ -37,8 +37,8 @@
             <section>
                 <article>
                     <h2>Accessibility on Demand</h2>
-                    <p> I worked in a group of 6 to design a learning space on campus that accommodates up to 100 learners with diverse abilities.</p>
-                    <p>We represented Accessibility on Demand, a design firm, that advocates and incorporates vital accessible methods into new buildings to support the Accessibility for Ontarians with Disabilities Act (2005) and drive Ontario to a barrier-free zone.</p>
+                    <p><strong>Objective:</strong> Design a learning space on campus that accommodates up to 100 learners with diverse abilities.</p>
+                    <p> I worked in a group of 6 to represent Accessibility on Demand, a design firm, that advocates and incorporates vital accessible methods into new buildings to support the Accessibility for Ontarians with Disabilities Act (2005) and drive Ontario to a barrier-free zone.</p>
                     <div class="container">
                         <img src="images/aod logo.png" alt="accessibility on demand logo" class="logo-img">
                         <img src="images/classroom.png" alt="classroom design" class="classroom-img">
