--- a/heatdesign.html
+++ b/heatdesign.html
@@ -36,7 +36,7 @@
             <section>
                     <article>
                         <h2>Heat Exchanger Design</h2>
-                        <p></strong>Objective:</strong> Research and design a heat exchanger that is viable to operate in a high volume chemical plant with a production rate of 20,000 to 200,000 tonnes/year.</p>
+                        <p><strong>Objective:</strong> Research and design a heat exchanger that is viable to operate in a high volume chemical plant with a production rate of 20,000 to 200,000 tonnes/year.</p>
                             <p>I designed a 2-8 shell-and-tube heat exchanger using an iterative approach on Microsoft Excel to determine the unknown dimensions with the provided operating conditions and heuristics. 
                                 The dimensions were varied based on a trial and error procedure, so that the calculated overall heat transfer coefficient converges within ± 5% of the initial estimate. <br>
                             <p><em>I received 94% on the individual portion of the project.</em></p>
